experiment_output/error_log/nondex-pulkitent-parking-lot-lld-oop-ood.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task266/wd/NonDex-plugin-test/github.com/pulkitent/parking-lot-lld-oop-ood/src/main/java/NonElectricalParkingSpot.java:3: error: incompatible types: ParkingSpot cannot be converted to ParkingSpotType
        super(type);
              ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1s
